# dhf-localization

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  gt_trajectory.eps  perform_state_estimation.py  pyproject.toml  rmse_ori_time.eps  rmse_pos_time.eps
LaTeX/: .gitignore  .markdownlint.json  BMETeX_BSc.sty  filters.tex  hwandmodels.tex  intro.tex  library.bib  main.tex  measmodel.tex  mobile_robot_localization.tex  outline.md  sec1-intro.tex  sec2-hwandmodels.tex  sec3-measmodel.tex  sec4-stateestimators.tex  sec5-eval.tex  sec6-summary.tex
LaTeX/__Figures/: KSK_sz.eps
Presentation/: presentation.tex
Presentation/_Figures/: szechenyi2020.eps
dhflocalization/: algorithm.py  perform_evaluation.py  perform_plotting.py  perform_state_estimation.py  stateestimation.prof  stateestimation_vec.prof  todo.txt  utils.py
dhflocalization/customtypes/: __init__.py  simudata.py  state.py
dhflocalization/evaluation_scripts/: plots.py  ros_evaluation.py  ros_evaluation_old.py
dhflocalization/evaluator/: __init__.py  data_association.py  metrics.py
dhflocalization/filters/: __init__.py  cedh.py  edh.py  ekf.py  updaters.py
dhflocalization/gridmap/: __init__.py  grid_map.py  processpgm.py
dhflocalization/kinematics/: __init__.py  motionmodel.py
dhflocalization/measurement/: __init__.py  measurement.py  measurementmodel.py  measurementprocessor.py  sensor.py
dhflocalization/rawdata/: __init__.py  configexporter.py  loadsimudata.py  optitrack_reader.py  resultdatahandler.py  yamlhandler.py
dhflocalization/resources/: map_test.csv  topicexport-18.json  topicexport-19.json  topicexport.json  topicexport_10hz.json  topicexport_2.json
dhflocalization/state/: __init__.py  particle.py  state.py
ekf_edh_trial/: trial.m
(+29 files in other folders)
